--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#f44336</color>
+    <color name="colorPrimary">@color/red</color>
     <color name="colorPrimaryDark">#d32f2f</color>
     <color name="colorAccent">#FF4081</color>
     <color name="green">#4CAF50</color>
+    <color name="red">#f44336</color>
 </resources>
