--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -46,6 +46,7 @@
             app:errorEnabled="true">
 
             <EditText
+                android:id="@+id/et_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
@@ -85,6 +86,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
+            android:id="@+id/et_password"
             android:layout_centerHorizontal="true"
             android:hint="@string/password"/>
 
