--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:id="@+id/et_name_wrapper"
+            android:id="@+id/et_name_wrapper_sign_up"
             app:errorEnabled="true">
 
         <EditText
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/et_name"
+            android:id="@+id/et_name_sign_up"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:hint="@string/full_name"/>
@@ -41,12 +41,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/et_name_wrapper"
-            android:id="@+id/et_username_wrapper"
+            android:layout_below="@+id/et_name_wrapper_sign_up"
+            android:id="@+id/et_username_wrapper_sign_up"
             app:errorEnabled="true">
 
             <EditText
-                android:id="@+id/et_username"
+                android:id="@+id/et_username_sign_up"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
@@ -59,8 +59,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/et_username_wrapper"
-            android:id="@+id/et_email_wrapper"
+            android:layout_below="@+id/et_username_wrapper_sign_up"
+            android:id="@+id/et_email_wrapper_sign_up"
             app:errorEnabled="true">
 
         <EditText
@@ -77,8 +77,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/et_email_wrapper"
-            android:id="@+id/et_password_wrapper"
+            android:layout_below="@+id/et_email_wrapper_sign_up"
+            android:id="@+id/et_password_wrapper_sign_up"
             app:errorEnabled="true">
 
         <EditText
@@ -86,10 +86,19 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/et_password"
+            android:id="@+id/et_password_sign_up"
             android:layout_centerHorizontal="true"
             android:hint="@string/password"/>
 
         </android.support.design.widget.TextInputLayout>
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar_sign_up"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:visibility="invisible"/>
     </RelativeLayout>
 </RelativeLayout>
