--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/et_username"
+            android:id="@+id/et_username_sign_in"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:hint="@string/username_email_or_phone_number"/>
@@ -34,8 +34,8 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/et_password"
-            android:layout_below="@+id/et_username"
+            android:id="@+id/et_password_sign_in"
+            android:layout_below="@+id/et_username_sign_in"
             android:layout_centerHorizontal="true"
             android:hint="@string/password" />
 
@@ -43,9 +43,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/log_in"
-            android:id="@+id/loginButton"
-            android:layout_below="@+id/et_password"
+            android:id="@+id/loginButton_sign_in"
+            android:layout_below="@+id/et_password_sign_in"
             android:layout_centerHorizontal="true" />
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar_sign_in"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:visibility="invisible"/>
 
     </RelativeLayout>
 </RelativeLayout>
