--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="green">#4CAF50</color>
     <color name="red">#f44336</color>
+    <color name="textPrimaey">#212121</color>
+    <color name="textSecondary">#737373</color>
 </resources>
