--- a/app/src/main/res/layout/chat_preview.xml
+++ b/app/src/main/res/layout/chat_preview.xml
@@ -3,7 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="72dp"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="RtlSymmetry">
+    tools:ignore="RtlSymmetry"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <LinearLayout
         android:layout_width="wrap_content"
