Avatar transition from Chats list to Chat; Chat toolbar menu (avatar)

--- a/app/src/main/res/layout/chat_preview.xml
+++ b/app/src/main/res/layout/chat_preview.xml
@@ -20,7 +20,9 @@
             android:id="@+id/avatar_chat_preview"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/avatar_placeholder" />
+            android:src="@drawable/avatar_placeholder"
+            android:transitionName="transition_name_avatar_main_chat"
+            tools:ignore="UnusedAttribute" />
 
     </LinearLayout>
 
