--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/red</color>
-    <color name="colorPrimaryDark">#d32f2f</color>
+    <color name="colorPrimary">#d32f2f</color>
+    <color name="colorPrimaryDark">#b71c1c</color>
     <color name="colorAccent">#FF4081</color>
     <color name="green">#4CAF50</color>
     <color name="red">#f44336</color>
     <color name="textPrimaey">#212121</color>
     <color name="textSecondary">#737373</color>
+    <color name="white">#ffffff</color>
 </resources>
