Remove cloud icon usage – See 664f68724bc927685ad616cc8ea62ad8f49f0834

--- a/app/src/main/res/layout/chat_preview.xml
+++ b/app/src/main/res/layout/chat_preview.xml
@@ -68,6 +68,6 @@
         android:layout_alignBottom="@+id/last_message_when"
         android:layout_toStartOf="@+id/last_message_when"
         android:layout_alignTop="@+id/textViewsWrapper"
-        android:src="@drawable/ic_cloud_grey"/>
+        android:src="@drawable/ic_done_all_grey"/>
 
 </RelativeLayout>
